# prova-equipe-dados

./: .gitignore  DBT_DATABRICKS_GUIDE.md  ER.dbml  LICENSE  README.md  dbt_examples.md
databricks/: Parte 1 - SQL.ipynb  Parte 1 - SQL.py
databricks/dados_fornecidos/: tb_cmssitelp.csv  tb_paymentmodes.csv  tb_regions.csv
databricks/notebooks/: Parte 1 - SQL.ipynb  Parte 2 - Análise de Dados.ipynb
dbt_project/dbt_cantu/: dbt_project.yml  pyproject.toml
dbt_project/dbt_cantu/.dbt/: .user.yml  profiles.yml
dbt_project/dbt_cantu/cantu/: README.md
dbt_project/dbt_cantu/cantu/models/: source.yml
dbt_project/dbt_cantu/cantu/models/marts/campeonato/: classificacao_times.sql  config.yml
dbt_project/dbt_cantu/cantu/models/marts/comissao/: config.yml  lista_vendedores.sql
dbt_project/dbt_cantu/cantu/models/marts/organizacional/: config.yml  organizacao_empresarial.sql
dbt_project/dbt_cantu/cantu/seeds/: dados_colaboradores.csv  dados_comissoes.csv  dados_jogos.csv  dados_times.csv
