[tool.poetry]
name = "dbt-cantu"
version = "0.1.0"
description = ""
authors = ["Edvaldo Gutierres <edvaldo_gutierres@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.10.2"
dbt-databricks = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
